# viennaptm

./: ..gitignore.swp  .buildinfo  .gitignore  CONTRIBUTE.md  HOWTO.txt  LICENSE  README.md  api.html  build_instructions.txt  citation.html  database.xml  entrypoint.html  environment.yml  genindex.html  index.html  installation.html  introduction.html  list_of_ptms.html  modifier.py  my_protein.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  tutorial.html  unit_tests.py  viennaptm.py  visualization_viennaptm.ipynb
.doctrees/: api.doctree  citation.doctree  entrypoint.doctree  environment.pickle  index.doctree  installation.doctree  introduction.doctree  list_of_ptms.doctree  tutorial.doctree
.githooks/: pre-push
.github/workflows/: cicd.yml
IOclasses/: io_library.py  io_modlibrary.py  io_structures.py  iomodlibrary.py  iostructures.py
_sources/: api.rst.txt  entrypoint.rst.txt  introduction.rst.txt  list_of_ptms.rst.txt
_static/: custom.css
docs/: Makefile  make.bat
docs/scripts/: list_ptms_from_library.py  ptms_to_rst_table.py
docs/source/: api.rst  citation.rst  conf.py  entrypoint.rst  index.rst  installation.rst  introduction.rst  list_of_ptms.rst  references.bib  tutorial.rst
docs/source/_static/: datatable-init.js
docs/source/_templates/autosummary/: class.rst  functions.rst
legacy/: all.cfg  done.cfg  ffG54a8_parameters.cfg  parameter_translate.py
libraries/: 2019-09-15_library.xml
modification/: calculate_atom_positions.py  mod_library.py  modification.py  modification_report.py  modifier.py
notebooks/: visualization.ipynb  visualization_viennaptm.ipynb
tests/: file_paths.py  helper_functions.py  test_entrypoints.py  test_iomodlibrary.py
tests/data/: 1vii.cif  example_config.yaml
tests/test_entrypoints/: __init__.py  test_entrypoint_validation.py  test_viennaptm.py
tests/test_modification_log/: __init__.py  test_modification_log.py
tests/test_report/: test_report.py
tests/tests_gromacs/: __init__.py  test_minimzation_pipeline.py  test_pdb2gmx.py
tests/tests_io/: __init__.py  test_iomodlibrary.py  test_iostructure.py  test_resources.py
tests/tests_modification/: __init__.py  test_calculate_atom_positions.py  test_modification.py  test_modification_all.py  test_modification_cif.py  test_modification_general.py  test_modification_pdb.py
utils/: move_directory_up.py  paths.py
utils/enums/: io_enums.py
viennaptm/: DatabaseIO.py  LICENSE  ModificationJob.py  __init__.py  database.xml  setup.py  viennaptm_logo.xcf
viennaptm/IOclasses/: iomodlibrary.py
viennaptm/dataclasses/: annotatedstructure.py
viennaptm/dataclasses/parameters/: modifier_parameters.py
viennaptm/entrypoints/: modifier.py  viennaptm.py
viennaptm/gromacs/: editconf.py  gromacs_command.py  grompp.py  mdrun.py  minimization_pipeline.py  pdb2gmx.py  trjconv.py  unit_test_gromacs.py
viennaptm/io/: modlibrary.py  structures.py
viennaptm/modification/: mod_library.py  modification_dto.py  modification_library.py  modifier.py
viennaptm/modification/application/: modifier.py
viennaptm/modification/calculation/: align.py  calculate_atom_positions.py
viennaptm/modification/modification/: mod_library.py  modification.py  modification_report.py  modifier.py
viennaptm/resources/MCS_mappings/2025-11-30/: MCS_mappings.json
viennaptm/resources/aa_pdbs/: __init__.py
viennaptm/resources/gromacs/: minim.mdp
viennaptm/resources/libraries/: 2025-11-01_library.xml  library.json
viennaptm/resources/libraries/2025-11-30/: library.json
viennaptm/resources/libraries/2025-12-18/: library.json
viennaptm/resources/metadata/: annotations.json
viennaptm/resources/ptm_instructions/2025-11-30/: ptm_instructions.json
viennaptm/resources/ptm_parameters/: get_ff_files.py
viennaptm/resources/ptms/2025-11-30/: ptms.json
viennaptm/utils/: entrypoint_helper.py  error_handling.py  files.py  fixtures.py  gromacs.py  logger.py  paths.py  unit_test_utils.py  visualization.py  visualizer.py
viennaptm/utils/enums/: io_enums.py
