[build-system]
requires = ["setuptools>=77", "setuptools-scm", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[project]
name = "viennaptm"
dynamic = ["version"]
description = "Python package to apply post-translational modifications to protein structures."
readme = "README.md"
authors = [
  { name = "Sophie Margreitter", email = "sophie.margreitter@gmail.com" },
  { name = "Drazen Petrov", email = "durozlikovski@gmail.com" },
  { name = "Christian Margreitter", email = "christian.margreitter@gmail.com" },
  { name = "Bojan Zagrovic", email = "bojan.zagrovich@univie.ac.at" }
]
maintainers = [
  { name = "Sophie Margreitter", email = "sophie.margreitter@gmail.com" },
  { name = "Christian Margreitter", email = "christian.margreitter@gmail.com" }
]
keywords = [
  "Post-translational modifications",
  "python",
  "python-packages",
  "semantic-versions"
]
classifiers = [
    "Development Status :: 4 - Beta",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

license = "Apache-2.0"
license-files = [
  "LICEN[CS]E*",
  "viennaptm/resources/LICENSE"
]

requires-python = ">=3.9"
dependencies = [
    "pydantic>=2",
    "pandas",
    "biopython>=1.8",
    "scipy",
    "pyyaml"
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.0"
]
docs = [
    "sphinx>=8.2.0",
    "sphinxcontrib-napoleon>=0.7",
    "sphinx_rtd_theme>=3.0.0",
    "sphinxcontrib-bibtex>=2.6.0"
]
render = [
    "nglview>=4.0",
    "notebook>=7.0.0"
]
build = [
    "twine",
    "build"
]

[project.urls]
Homepage = "https://viennaptm.univie.ac.at"
Repository = "https://github.com/viennaptm/viennaptm"

[project.scripts]
viennaptm = "viennaptm.entrypoints.viennaptm:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
viennaptm = ["resources/**/*"]
